--- a/public_html/styles/rickies.css
+++ b/public_html/styles/rickies.css
@@ -2907,35 +2907,12 @@ mark {
 #pick_filter_sheet > .content > fieldset .range {
   flex-wrap: nowrap;
 }
-#pick_filter_sheet > .content > fieldset .range label {
-  flex-basis: unset;
-  flex-grow: unset;
-}
-#pick_filter_sheet > .content > fieldset .range span.big_label {
-  display: none;
-}
-@media screen and (min-width: 375px) {
-  #pick_filter_sheet > .content > fieldset .range span.small_label {
-    display: none;
-  }
-  #pick_filter_sheet > .content > fieldset .range span.big_label {
-    display: inline;
-  }
-}
-@media screen and (min-width: 576px) {
-  #pick_filter_sheet > .content > fieldset .range span.small_label {
-    display: inline;
-  }
-  #pick_filter_sheet > .content > fieldset .range span.big_label {
-    display: none;
-  }
-}
 #pick_filter_sheet > .content > fieldset .range input[type=number] {
-  width: 1.45rem;
+  width: 2rem;
   font-weight: bold;
   text-align: center;
   border: 1px solid var(--link-color);
-  margin: 0 4px;
+  margin: var(--label-padding) 4px;
   border-radius: 4px;
   height: 1.5rem;
   line-height: 1em;
@@ -2959,6 +2936,34 @@ mark {
 #pick_filter_sheet > .content > fieldset .range input[type=number]:not(:placeholder-shown) {
   background: var(--link-color);
   color: white;
+}
+@media screen and (min-width: 1200px) {
+  #pick_filter_sheet > .content > fieldset .range input[type=number] {
+    width: 1.45rem;
+  }
+}
+#pick_filter_sheet > .content > fieldset .range label:not(.end_of_input) {
+  flex-basis: unset;
+  flex-grow: unset;
+}
+#pick_filter_sheet > .content > fieldset .range span.big_label {
+  display: none;
+}
+@media screen and (min-width: 375px) {
+  #pick_filter_sheet > .content > fieldset .range span.small_label {
+    display: none;
+  }
+  #pick_filter_sheet > .content > fieldset .range span.big_label {
+    display: inline;
+  }
+}
+@media screen and (min-width: 576px) {
+  #pick_filter_sheet > .content > fieldset .range span.small_label {
+    display: inline;
+  }
+  #pick_filter_sheet > .content > fieldset .range span.big_label {
+    display: none;
+  }
 }
 #pick_filter_sheet > .content > fieldset .range .range_icon {
   margin-right: 4px;
